# FreeCAD

./: CMakeLists.txt  NativeIFC.cpp
src/: CMakeLists.txt  QtOpenGL.h
src/App/: AppPlacement.cpp  Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPyImp.cpp  DocumentObserverPython.cpp  DynamicProperty.cpp  Expression.cpp  Extension.cpp  Extension.h  ExtensionContainer.cpp  ExtensionContainer.h  ExtensionPyImp.cpp  FeaturePython.cpp  FeatureTest.cpp  GeoFeature.cpp  GeoFeature.h  GeoFeatureGroupExtension.cpp  GeoFeatureGroupExtension.h  GeoFeatureGroupExtensionPyImp.cpp  GeoFeaturePyImp.cpp  GroupExtension.cpp  GroupExtension.h  InventorObject.cpp  InventorObject.h  MaterialObject.cpp  MaterialPyImp.cpp  MergeDocuments.cpp  (+28 more)
src/Base/: AxisPyImp.cpp  BaseClass.cpp  BaseClass.h  BaseClassPyImp.cpp  Builder3D.cpp  CMakeLists.txt  Console.cpp  Console.h  CoordinateSystemPyImp.cpp  Debugger.cpp  Exception.cpp  Exception.h  ExceptionFactory.h  Factory.h  FileTemplate.h  GeometryPyCXX.cpp  Parameter.cpp  Parameter.h  ParameterPy.cpp  Persistence.cpp  Persistence.h  PyExport.cpp  PyObjectBase.h  Quantity.cpp  QuantityPyImp.cpp  Reader.cpp  Sequencer.cpp  Sequencer.h  Stream.cpp  Tools.cpp  Type.cpp  Type.h  UnitsApiPy.cpp  UnitsSchema.cpp  UnitsSchemaCentimeters.cpp  UnitsSchemaImperial1.cpp  UnitsSchemaInternal.cpp  UnitsSchemaMKS.cpp  Uuid.cpp  Writer.cpp  (+1 more)
src/Gui/: Application.cpp  Application.h  ApplicationPy.cpp  Assistant.cpp  AutoSaver.cpp  BitmapFactory.cpp  BitmapFactory.h  CMakeLists.txt  CoinRiftWidget.cpp  Command.cpp  CommandDoc.cpp  CommandMacro.cpp  CommandStd.cpp  CommandTest.cpp  CommandView.cpp  DlgCustomizeImp.cpp  DlgCustomizeSpaceball.cpp  DlgDisplayPropertiesImp.cpp  DlgExpressionInput.cpp  DlgGeneralImp.cpp  DlgMacroExecuteImp.cpp  DlgPreferencesImp.cpp  DlgSettings3DViewImp.cpp  DlgSettingsUnitsImp.cpp  DlgUnitsCalculatorImp.cpp  Document.cpp  Document.h  DownloadManager.cpp  EditorView.cpp  EditorView.h  GLPainter.cpp  GestureNavigationStyle.cpp  GuiApplication.cpp  GuiApplication.h  GuiApplicationNativeEventAware.cpp  GuiConsole.h  GuiPlacement.cpp  InputField.cpp  InputVector.cpp  Macro.cpp  (+83 more)
src/Gui/DAGView/: DAGModel.cpp  DAGView.cpp
src/Gui/Quarter/: SoQTQuarterAdaptor.cpp
src/Gui/TaskView/: TaskAppearance.cpp  TaskDialogPython.cpp  TaskDialogPython.h  TaskSelectLinkProperty.cpp
src/Gui/propertyeditor/: PropertyEditor.cpp  PropertyItem.cpp  PropertyItem.h  PropertyModel.cpp
src/Main/: CMakeLists.txt  MainCmd.cpp  MainGui.cpp  MainPy.cpp
src/Mod/: CMakeLists.txt
src/Mod/Assembly/App/: AppAssembly.cpp  Item.cpp  PartRef.cpp  Product.cpp
src/Mod/Assembly/Gui/: AppAssemblyGui.cpp  CommandConstraints.cpp  ViewProviderPartRef.cpp
src/Mod/Cam/App/: AppCam.cpp
src/Mod/Cam/Gui/: AppCamGui.cpp
src/Mod/Draft/: CMakeLists.txt
src/Mod/Draft/App/: AppDraftUtils.cpp  AppDraftUtilsPy.cpp  DraftDxf.cpp
src/Mod/Drawing/App/: AppDrawing.cpp  AppDrawingPy.cpp  FeaturePage.cpp
src/Mod/Drawing/Gui/: AppDrawingGui.cpp
src/Mod/Fem/App/: AppFem.cpp  FemConstraintBearing.cpp  FemConstraintFluidBoundary.cpp  FemMesh.cpp  FemMeshShapeNetgenObject.cpp  FemPostPipeline.cpp  FemVTKTools.cpp  PropertyPostDataObject.cpp
src/Mod/Fem/Gui/: AppFemGui.cpp  Command.cpp  TaskCreateNodeSet.cpp  TaskDlgAnalysis.cpp  TaskDlgCreateNodeSet.cpp  TaskDlgMeshShapeNetgen.cpp  TaskFemConstraintFluidBoundary.cpp  TaskPostBoxes.cpp  ViewProviderFemConstraintBearing.cpp  ViewProviderFemConstraintGear.cpp  ViewProviderFemConstraintPulley.cpp  ViewProviderFemMesh.cpp  ViewProviderFemMeshPyImp.cpp
src/Mod/Image/App/: AppImage.cpp
src/Mod/Image/Gui/: AppImageGui.cpp
src/Mod/Import/App/: AppImport.cpp  AppImportPy.cpp  FeatureImportIges.cpp  FeatureImportStep.cpp  ImportOCAF.cpp  ImportOCAFAssembly.cpp
src/Mod/Import/Gui/: AppImportGui.cpp  AppImportGuiPy.cpp
src/Mod/Inspection/App/: AppInspection.cpp  InspectionFeature.cpp
src/Mod/Inspection/Gui/: AppInspectionGui.cpp  ViewProviderInspection.cpp
src/Mod/JtReader/App/: AppJtReader.cpp  AppJtReaderPy.cpp  FcLodHandler.cpp  TestJtReader.cpp
src/Mod/Measure/App/: AppMeasure.cpp
src/Mod/Mesh/App/: AppMesh.cpp  Exporter.cpp  GTSAlgos.cpp  Mesh.cpp
src/Mod/Mesh/Gui/: AppMeshGui.cpp  Command.cpp  DlgEvaluateMeshImp.cpp  MeshSelection.cpp  SoFCMeshFaceSet.cpp  SoFCMeshObject.cpp  ViewProvider.cpp  ViewProviderCurvature.cpp  ViewProviderMeshNode.cpp  ViewProviderTransformDemolding.cpp
src/Mod/MeshPart/App/: AppMeshPart.cpp  AppMeshPartPy.cpp  CurveProjector.cpp  MeshAlgos.cpp  Mesher.cpp
src/Mod/MeshPart/Gui/: AppMeshPartGui.cpp  Tessellation.cpp
src/Mod/Part/: .MakeBottle.py.swp
src/Mod/Part/App/: .DatumFeature.h.swp  AttachExtension.cpp  AttachExtension.h  Attacher.cpp  BodyBase.h  CustomFeature.cpp  CustomFeature.h  DatumFeature.cpp  DatumFeature.h  FT2FC.cpp  FT2FC.h  FeaturePartBox.cpp  FeaturePartCurveNet.cpp  FeaturePartImportBrep.cpp  FeaturePartImportIges.cpp  FeaturePartImportStep.cpp  Geometry.cpp  Geometry.h  Geometry2d.cpp  Geometry2d.h  ImportIges.cpp  ImportStep.cpp  OCCError.h  Part2DObject.cpp  Part2DObject.h  PartFeature.cpp  PartFeature.h  PartFeatureReference.h  PrimitiveFeature.cpp  PrimitiveFeature.h  PropertyGeometryList.cpp  PropertyGeometryList.h  PropertyTopoShape.cpp  PropertyTopoShape.h  TopoShape.cpp  TopoShape.h  modelRefine.cpp
src/Mod/Part/Gui/: AppPartGui.cpp  AttacherTexts.cpp  AttacherTexts.h  Command.cpp  CommandSimple.cpp  CrossSections.cpp  DlgExtrusion.cpp  DlgFilletEdges.cpp  DlgPrimitives.cpp  DlgPrimitives.h  DlgRevolution.cpp  DlgSettings3DViewPartImp.cpp  Mirroring.cpp  TaskAttacher.cpp  TaskDimension.cpp  TaskLoft.cpp  TaskOffset.cpp  (+12 more)
src/Mod/Spreadsheet/: TestSpreadsheet.py
src/Tools/: PythonToCPP.py  generate.py
src/Tools/generateTemplates/: templateClassPyExport.py  templateModuleAppMain.py
(+128 files in other folders)
